@@ -1,3 +1,7 @@
+2007-09-05  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/action.rb: abort on action-call by reserved word.
+
 2007-09-02  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* run/server/mongrel: mongrel.
